@@ -998,7 +998,7 @@ them. When you're done, press Enter to accept the changes (in which case
 the cart will be re-disasembled) or Escape to cancel them.
 Note that only instructions that have been fully disassembled
 can be edited.  In particular, blank lines or lines with '.byte' directives
-cannot be edited.  If you wish to edit the latter, then the 'Determine code'
+cannot be edited.  If you wish to edit the latter, then the 'Resolve data'
 item should be set to 'Never' first.  Also note that certain ROMs can have
 sections of address space swapped in and out dynamically.  As such, changing
 the contents of a certain address will change the area pointed to <b>at
