@@ -594,6 +594,7 @@
 					<tr><td>EEPROM path</td><td>specifies location of EEPROM files</td><td>-eepromdir</td></tr>
 					<tr><td>Multiple snapshots</td><td>whether to overwrite old snapshots</td><td>-sssingle</td></tr>
 					<tr><td>Snapshot in 1x mode</td><td>save snapshot in 1x mode, without filtering</td><td>-ss1x</td></tr>
+					<tr><td>Snapshot interval</td><td>interval (in seconds) between snapshot</td><td>-ssinterval</td></tr>
 				</table>
 			</td>
 		</tr>
